[project]
name = "agents-who-understand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "minigrid>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["agents_who*"]
