[project]
name = "agents-who-understand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[other]>=1.2.3",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "minigrid>=3.0.0",
    "stable-baselines3>=2.7.1",
]

[tool.setuptools.packages.find]
include = ["when_can_i_follow*"]
